Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumObjIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Number var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
