Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjNumObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(Test())
    end

    action Test() returns Integer
        Number var
        var:SetValue(5.0)
        return var
    end
end